--- a/test123.html
+++ b/test123.html
@@ -144,7 +144,7 @@ p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
 li, p{ font-size: 1.6em; }
 #resume nav a, #posts nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
-h4 a, p.l span{
+h4 a, p.l span, li b{
 font-size: 1em;
 }
 h3 a{
@@ -956,10 +956,10 @@ right: 0;
                         <div class="research">
                             <p class="l">In addition to usability testing of features and flows the following areas would give valuable insights to user preference and recall.
                             <ol>
-                                <li>UX Wording - Gather feedback from users on the understanding and impact of different titles and call-to-action wording.</li>
-                                <li>Activity Images - Analyze user responses to identify patterns and trends in image preferences, helping to optimize the selection of activity images.</li>
-                                <li>Value Proposition - distribute surveys to a broader user base to gather quantitative data on how users perceive the app's value proposition</li>
-                                <li>Brand Awareness - During usability testing sessions, assign users specific tasks that involve finding the product again in the future.</li>
+                                <li><b>UX Wording</b> - Gather feedback from users on the understanding and impact of different titles and call-to-action wording.</li>
+                                <li><b>Activity Images</b> - Analyze user responses to identify patterns and trends in image preferences, helping to optimize the selection of activity images.</li>
+                                <li><b>Value Proposition</b> - distribute surveys to a broader user base to gather quantitative data on how users perceive the app's value proposition</li>
+                                <li><b>Brand Awareness</b> - During usability testing sessions, assign users specific tasks that involve finding the product again in the future.</li>
                             </ol>
                         </div>
                         <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
