--- a/test123.html
+++ b/test123.html
@@ -247,7 +247,7 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-b
 background-repeat: no-repeat;
 background-position: 50% 0;
 }
-.header div{
+.header > div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
 background-repeat: repeat-x;
 background-position: 0 100%;
