--- a/test123.html
+++ b/test123.html
@@ -247,7 +247,7 @@ background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-b
 background-repeat: no-repeat;
 background-position: 50% 0;
 }
-.header > div{
+.header div div{
 background-image: url(https://peteroper.github.io/portfolio/assets/imgs/header-shape.png);
 background-repeat: repeat-x;
 background-position: 0 100%;
@@ -559,13 +559,12 @@ height: 274px;
 overflow: hidden;
 }
 .header div div{
-width: 724px;
 height: 275px;
 position: relative;
 }
 .header .img{
 position: absolute;
-right: 0;
+left: 560px;
 top: 50%;
 margin-top: -100px;
 width: 250px;
