--- a/index.html
+++ b/index.html
@@ -229,8 +229,17 @@ background: #000;
 color: #222;
 background-color: #EEAD50;
 }
+#showcase2 div{
+color: #FFF;
+background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
+}
 #showcase2 div.hypothesis{
-background-color: #EF8E8C;
+color: #000;
+background: #FAA525;
+}
+#showcase2 div.research{
+color: #FFF;
+background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
 }
 .header{
 background-color: #346672;
@@ -894,7 +903,7 @@ right: 0;
                 <h3>Showcase</h3>
                 <nav class="tab-menu">
                     <a href="#showcase1" class="selected">Pulse Football</a>
-                    <a href="#showcase2">Adventure Sports</a>
+                    <a href="#showcase2">Adventure Card</a>
                     <!--a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank">au Usage Support</a>
                     <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank">au Photo Cloud</a-->
                 </nav>
@@ -922,7 +931,34 @@ right: 0;
                     <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
                     </div>
                     <div id="showcase2" class="tab-container">
-                        <div><h4>Coming Soon</h4></div>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
+                        <div>
+                            <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
+                            <p>With fresh eyes and a new perspective gained while working exclusively as a UX designer this showcase builds on past experiences working in the event industry to create a more refined mobile first and responsive website design.</p>
+                            <p class="l">Objectives</p>
+                            <ol>
+                                <li>Refine existing IA to improve findability and streamline user journeys.</li>
+                                <li>Apply universal UI patterns for an intuitive UX.</li>
+                                <li>Identify areas for User Research & Testing.</li>
+                            </ol>
+                        </div>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg" />
+                        <div class="hypothesis">
+                            <p class="l">Information architecture and value proposition are 2 key aspects I focussed on when re imagining the UX for adventure cards.</p>
+                            <p>The user journey for event bookings includes search, filter, purchase and post purchase planning. Different variables such as location, price, restrictions and availability also need to be factored in.</p>
+                            <p>Value proposition is important due to a competitive market. However when re-evaluting the UX and UI I realised this requirement reduced usability. Therefore I aimed to tie usability to the value proposition and apply different techniques to build brand awareness.</p>
+                        </div>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.3.jpg" />
+                        <div class="research">
+                            <p class="l">In addition to usability testing of features and flows the following areas would give valuable insights to user preference and recall.
+                            <ol>
+                                <li><b>UX Wording</b> - Gather feedback from users on the understanding and impact of different titles and call-to-action wording.</li>
+                                <li><b>Activity Images</b> - Analyze user responses to identify patterns and trends in image preferences, helping to optimize the selection of activity images.</li>
+                                <li><b>Value Proposition</b> - distribute surveys to a broader user base to gather quantitative data on how users perceive the app's value proposition</li>
+                                <li><b>Brand Awareness</b> - During usability testing sessions, assign users specific tasks that involve finding the product again in the future.</li>
+                            </ol>
+                        </div>
+                        <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
                     </div>
                     <div id="showcase3" class="tab-container">
                         <div><h4>Coming Soon</h4></div>
