--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
 li, p{ font-size: 1.6em; }
 #resume nav a, #posts nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
-h4 a, p.l span{
+h4 a, p.l span, li b{
 font-size: 1em;
 }
 h3 a{
