--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@ right: 0;
                         <div><h4>Coming Soon</h4></div>
                     </div>
                 </div>
-                <p class="webc-only" style="padding-top: 24px; max-width: 724px;">My day to day work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
+                <p class="webc-only" style="padding-top: 24px; max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. Design processes and how I work professionally are shared within my casestudy slide deck.</p>
         </div>
         <!-- showcase ends -->
 
