--- a/index.html
+++ b/index.html
@@ -864,8 +864,11 @@ right: 0;
                     <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/post-img.png);" ></span>
                     <div class="contents">
                         <div>
-                            <h4><a href="https://peteroper.notion.site/A-Hard-Fast-Agile-Process-f6c895bd82b6440daf4622dc3b3bb40b?pvs=4" title="A Hard, Fast & Agile Process" target="_blank">A Hard, Fast & Agile Process</a></h4>
-                            <p>A specific process to accelarate the conceptualisation phase.</p>
+                            
+                            <h4><a href="https://peteroper.notion.site/Design-Vocabulary-Exercise-ba9eeee2c07b49f19e7905e5df450916?pvs=4" title="Design Language Exercise" target="_blank">Design Language Exercise</a></h4>
+                            <p>An ice breaking exercise for design teams.</p>
+                            <!--h4><a href="https://peteroper.notion.site/A-Hard-Fast-Agile-Process-f6c895bd82b6440daf4622dc3b3bb40b?pvs=4" title="A Hard, Fast & Agile Process" target="_blank">A Hard, Fast & Agile Process</a></h4>
+                            <p>A specific process to accelarate the conceptualisation phase.</p-->
                         </div>
                         <span class="icn material-icons">chevron_right</span>
                     </div>   
