--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
 li, p{ font-size: 1.6em; }
 #resume nav a, #posts nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
-h4 a, p.l span, p a, li b{
+h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
 h3 a{
@@ -906,7 +906,7 @@ right: 0;
         <!-- showcase -->
         <div id="showcase" class="tab-block">
                 <h3>Showcase</h3>
-                <p class="webc-only" style="padding-top: 24px; max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. <u>Design processes and how I work professionally</u> are shared confidentially within my casestudy slide deck.</p>
+                <p class="webc-only" style="max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. <u>Design processes and how I work professionally</u> are shared confidentially within my casestudy slide deck.</p>
                 <nav class="tab-menu">
                     <a href="#showcase1" class="selected">Pulse Football</a>
                     <a href="#showcase2">Adventure Card</a>
