--- a/index.html
+++ b/index.html
@@ -906,11 +906,11 @@ right: 0;
         <!-- showcase -->
         <div id="showcase" class="tab-block">
                 <h3>Showcase</h3>
-                <p class="webc-only" style="max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. <u>Design processes and how I work professionally</u> are shared confidentially within my casestudy slide deck.</p>
+                <p class="webc-only" style="padding-bottom: 24px; max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. <u>Design processes</u> and how I work professionally are shared confidentially  within my casestudy slide deck.</p>
                 <nav class="tab-menu">
                     <a href="#showcase1" class="selected">Pulse Football</a>
                     <a href="#showcase2">Adventure Card</a>
-                    <!--a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank">au Usage Support</a>
+                    <!--a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank">au Usage Support</a
                     <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank">au Photo Cloud</a-->
                 </nav>
                 <div class="scrollable">
