--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -39,13 +39,25 @@ $( ".tab-menu a").on( "click", function() {
 });
 </script>
 <style>
+/*/////////////////////////////////////////////////////////////*/
+/* FONT SIZE */
+/*/////////////////////////////////////////////////////////////*/
+*, body, p, p b, h1, h2, h3, h4{
+    font-size: 10px;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* LAYOUT */
+/*/////////////////////////////////////////////////////////////*/
+.container{
+flex-direction: column;
+}
 .navi{
-
+width: 220px;
 }
 .body{
-
-
+width: 748px;
 }
+/*/////////////////////////////////////////////////////////////*/
 </style>
 </head>
 <body>
