--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -40,10 +40,72 @@ $( ".tab-menu a").on( "click", function() {
 </script>
 <style>
 /*/////////////////////////////////////////////////////////////*/
+/* CORE */
+/*/////////////////////////////////////////////////////////////*/
+*, body{
+font-family: 'Raleway';
+padding: 0;
+margin: 0;
+border: 0;
+font-size: 18px;
+line-height: 160%;
+overflow: initial;
+-webkit-font-smoothing: subpixel-antialiased !important;
+}
+h1,h2,h3,h4,p.l span,p.l,h4 a{
+font-family: 'Merriweather','Lora';
+}
+.b span{
+font-weight: bold;
+}
+h3{
+margin-bottom: 12px;
+}
+li{ list-style-position: inside;}
+/*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
+}
+@media only screen and (max-width: 424px) {
+*, body, p, b, h1, h2, h3, h4{
+font-size: 8px;
+}
+}
+h1,h2, h3,h4{
+font-weight: 700;
+line-height: 140%; 
+font-family: Lora;
+}
+h1{ font-size: 4.8em; letter-spacing: -1.92px; }
+h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
+h3{ font-size: 2.4em; letter-spacing: -1.12px; }
+#contact h3{ font-size: 3.2em; }
+h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
+p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
+p.m{ font-size: 1.8em; }
+li, p{ font-size: 1.6em; }
+#resume nav a, #posts nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+h4 a, p.l span, p u, p a, li b{
+font-size: 1em;
+}
+h3 a{
+font-size: 0.68em;
+padding-left: 12px;
+letter-spacing: 0;
+display: inline-block;
+font-weight: normal;
+text-decoration: none;
+}
+a{
+text-decoration: none;
+}
+a:hover{
+text-decoration: underline;
+}
+@media only screen and (max-width: 424px) {
+h4{ font-size: 1.8em;  }
 }
 /*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
@@ -56,6 +118,15 @@ width: 220px;
 }
 .body{
 width: 748px;
+}
+#section{
+    padding: 0 0 68px 0;
+    margin: 0 0 68px 0;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+}
+#section p{
+max-width: 668px;
 }
 /*/////////////////////////////////////////////////////////////*/
 </style>
