--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -108,6 +108,12 @@ text-decoration: underline;
 h4{ font-size: 1.8em;  }
 }
 /*/////////////////////////////////////////////////////////////*/
+/* COLOR */
+/*/////////////////////////////////////////////////////////////*/
+.section p{
+opacity: 0.68%;
+}
+/*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
 /*/////////////////////////////////////////////////////////////*/
 .container{
