--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -110,8 +110,17 @@ h4{ font-size: 1.8em;  }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
+.navi a{
+opacity: 50%;    
+}
+.navi a.selected{
+opacity: 92%;    
+}
 .section p{
 opacity: 68%;
+}
+.navi a{
+color: #000;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
@@ -126,9 +135,16 @@ background-color: #E9E9ED;
 display: flex;
 flex-direction: column;
 }
+/*/////////////////////////////////////////////////////////////*/
+/* NAVI */
+/*/////////////////////////////////////////////////////////////*/
 .navi{
 width: 220px;
 }
+
+/*/////////////////////////////////////////////////////////////*/
+/* CONTENT */
+/*/////////////////////////////////////////////////////////////*/
 .body{
 width: 748px;
 }
