--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -82,7 +82,7 @@ h1{ font-size: 4.8em; letter-spacing: -1.92px; }
 h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
 h3{ font-size: 2.4em; letter-spacing: -1.12px; }
 #contact h3{ font-size: 3.2em; }
-h4{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
+h4, .navi nav a:first-of-type{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
 p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
 p.m{ font-size: 1.8em; }
 li, p{ font-size: 1.6em; }
