--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -141,7 +141,13 @@ flex-direction: column;
 .navi{
 width: 220px;
 }
-
+.navi nav{
+    margin-bottom: 12px;
+}
+.navi a{
+    margin-bottom: 0 0 4px;
+    display: block;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
 /*/////////////////////////////////////////////////////////////*/
