--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -145,6 +145,7 @@ width: 220px;
     margin-bottom: 12px;
 }
 .navi a{
+    text-decoration: none;
     margin-bottom: 0 0 4px;
     display: block;
 }
