--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -78,15 +78,9 @@ font-weight: 700;
 line-height: 140%; 
 font-family: Lora;
 }
-h1{ font-size: 4.8em; letter-spacing: -1.92px; }
-h2{ font-size: 2em; font-weight: normal; letter-spacing: 0.8px;  }
-h3{ font-size: 2.4em; letter-spacing: -1.12px; }
-#contact h3{ font-size: 3.2em; }
-h4, .navi nav a:first-of-type{ font-size: 2em; font-family: Merriweather; letter-spacing: -0.36px; }
-p.l{ font-size: 2.2em; line-height: 160%; letter-spacing: -0.48px; }
-p.m{ font-size: 1.8em; }
-li, p{ font-size: 1.6em; }
-#resume nav a, #posts nav a, #showcase nav a, .posts p{ font-size: 1.4em; line-height: 140%; letter-spacing: -0.28px; }
+
+.navi nav a:first-of-type, p{ font-size: 1.6em; }
+.navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
