--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -140,13 +140,12 @@ width: 220px;
 .navi a{
     text-decoration: none;
     margin-bottom: 0 0 4px;
-    display: block;
-}
-.navi nav a{
+    padding: 0 0 0 12px;
     display: none;
 }
 .navi nav a:first-of-type,
 .navi .selected a{
+    padding: 0;
     display: block;
 }
 /*/////////////////////////////////////////////////////////////*/
