--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -127,6 +127,7 @@ background-color: #E9E9ED;
 /*/////////////////////////////////////////////////////////////*/
 .container{
 display: flex;
+gap: 96px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
