--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -26,16 +26,19 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-$(document).ready(function(){
-$( ".tab-menu a").on( "click", function() {
-    var id = $(this).attr('href');
-    var parent = $(this).parents('.tab-block').attr('id');
-    $("#"+parent+" .tab-menu a").removeClass('selected');
-    $(this).addClass('selected');
-    $("#"+parent+" .tab-container").removeClass('tab-selected');
-    $("#"+parent+" "+id+"").addClass('tab-selected');
-    return false;
-});
+    $(document).ready(function() {
+  var stickyElement = $('.sticky-element');
+  var initialOffset = stickyElement.offset().top;
+
+  $(window).on('scroll', function() {
+    var scrollPosition = $(window).scrollTop();
+    
+    if (scrollPosition >= initialOffset) {
+      stickyElement.addClass('sticky');
+    } else {
+      stickyElement.removeClass('sticky');
+    }
+  });
 });
 </script>
 <style>
@@ -188,7 +191,7 @@ margin: bottom 16px;
 </head>
 <body>
 <div class="container">
-<div class="navi">
+<div class="navi sticky-element">
     <nav class="selected">
         <a href="#overview" class="selected">Overview</a>
         <a href="#project">Project</a>
