--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -131,6 +131,7 @@ background-color: #E9E9ED;
 .container{
 display: flex;
 gap: 96px;
+padding: 96px 0 0 96pc;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
