--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -150,8 +150,12 @@ width: 220px;
 }
 .navi nav a:first-of-type,
 .navi .selected a{
+    font-weight: 600;
     padding: 0;
     display: block;
+}
+.navi nav a:first-of-type{
+    margin-bottom: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
