--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -26,7 +26,7 @@
 <!--script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script-->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-    $(document).ready(function() {
+ $(document).ready(function() {
   var stickyElement = $('.sticky-element');
   var initialOffset = stickyElement.offset().top;
 
@@ -39,6 +39,20 @@
       stickyElement.removeClass('sticky');
     }
   });
+
+  $('nav a').on('click', function(event) {
+    event.preventDefault();
+    var target = $(this).attr('href');
+    var targetOffset = $(target).offset().top;
+
+    $('html, body').animate({
+      scrollTop: targetOffset
+    }, 800);
+
+    $('nav a').removeClass('selected');
+    $(this).addClass('selected');
+  });
+
 });
 </script>
 <style>
@@ -65,6 +79,19 @@ h3{
 margin-bottom: 12px;
 }
 li{ list-style-position: inside;}
+
+
+nav a {
+  transition: color 0.3s ease-in-out;
+}
+
+nav a.selected {
+  color: #f39c12;
+}
+
+html, body {
+  scroll-behavior: smooth;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
