--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -169,7 +169,7 @@ width: 220px;
 .navi nav{
     margin-bottom: 12px;
 }
-.navi a{
+.navi nav a{
     text-decoration: none;
     margin-bottom: 0 0 4px;
     padding: 0 0 0 12px;
@@ -178,10 +178,10 @@ width: 220px;
 .navi nav a:first-of-type,
 .navi .selected a{
     font-weight: 600;
-    padding: 0;
     display: block;
 }
 .navi nav a:first-of-type{
+    padding-left: 0;
     margin-bottom: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
