--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -110,7 +110,7 @@ font-family: Lora;
 }
 
 .navi nav a:first-of-type, p{ font-size: 1.6em; }
-.navi nav a{ font-size: 1.3em; }
+.segment h4, .navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
@@ -134,6 +134,7 @@ h4{ font-size: 1.8em;  }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
+.segment h4,
 .navi a{
 opacity: 50%;    
 }
