--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -154,6 +154,12 @@ color: #000;
 background-color: #E9E9ED;
 }
 /*/////////////////////////////////////////////////////////////*/
+/* BORDERS */
+/*/////////////////////////////////////////////////////////////*/
+.section{
+    border-color: #D5D5D5;
+}
+/*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
 /*/////////////////////////////////////////////////////////////*/
 .container{
