--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -92,6 +92,11 @@ nav a.selected {
 html, body {
   scroll-behavior: smooth;
 }
+.sticky{
+    position: sticky;
+    top: 0; 
+    padding-top: 48px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
