--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -186,10 +186,13 @@ width: 220px;
     padding: 0 0 0 12px;
     display: none;
 }
+.navi nav a:first-of-type,
+.navi nav.selected a{
+    display: block;
+}
 .navi nav.selected a:first-of-type,
 .navi .nav .selected{
     font-weight: 600;
-    display: block;
 }
 .navi nav a:first-of-type{
     padding-left: 0;
