--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -49,7 +49,7 @@
       scrollTop: targetOffset
     }, 800);
 
-    $('nav a').removeClass('selected');
+    $('nav, nav a').removeClass('selected');
     $(this).parent().addClass('selected');
     $(this).addClass('selected');
   });
