--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -91,6 +91,7 @@ html, body {
   scroll-behavior: smooth;
 }
 .sticky{
+    height: 400px;
     position: sticky;
     top: 0; 
     padding-top: 48px;
