--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -265,7 +265,7 @@ margin: bottom 16px;
         <a href="#design-decisions">Decisions</a>
     </nav>
     <nav>
-        <a href="#overview">Design</a>
+        <a href="#design">Design</a>
         <a href="#project">Prototyping</a>
         <a href="#product">Usability Testing</a>
         <a href="#ut-insights">Insights</a>
