--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -266,8 +266,8 @@ margin: bottom 16px;
     </nav>
     <nav>
         <a href="#design">Design</a>
-        <a href="#project">Prototyping</a>
-        <a href="#product">Usability Testing</a>
+        <a href="#prototyping">Prototyping</a>
+        <a href="#usability-testing">Usability Testing</a>
         <a href="#ut-insights">Insights</a>
         <a href="#refinement">Refinement</a>
     </nav>
