--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -274,7 +274,7 @@ margin: bottom 16px;
     <nav>
         <a href="#development">Development</a>
         <a href="#final-design">Final Design</a>
-        <a href="#handoff">Hand Off</a>
+        <a href="#design-handoff">Hand Off</a>
         <a href="#design-system">Design System</a>
     </nav>
     <nav>
