--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -193,7 +193,7 @@ width: 220px;
 }
 .navi nav.selected a:first-of-type,
 .navi .nav .selected{
-    font-weight: 600;
+    font-weight: bold;
 }
 .navi nav a:first-of-type{
     padding-left: 0;
