--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -191,6 +191,7 @@ width: 220px;
 .navi nav.selected a{
     display: block;
 }
+.navi nav.selected a:nth-child(2),
 .navi nav.selected a:first-of-type,
 .navi .nav .selected{
     font-weight: bold;
