--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -142,6 +142,7 @@ h4{ font-size: 1.8em;  }
 .navi a{
 opacity: 50%;    
 }
+.navi nav.selected a:nth-child(2),
 .navi nav.selected a:first-of-type,
 .navi a.selected{
 opacity: 92%;    
