--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -54,6 +54,20 @@
     $(this).addClass('selected');
   });
 
+  $(window).on('scroll', function() {
+    $('.section, segment').each(function() {
+      var sectionTop = $(this).offset().top;
+      var scrollTop = $(window).scrollTop();
+      
+      if (scrollTop >= sectionTop - 36) {
+        var sectionId = $(this).attr('id');
+        $(this).parent().addClass('selected');
+        $('nav a').removeClass('selected');
+        $('nav a[href="#' + sectionId + '"]').addClass('selected');
+      }
+    });
+  });
+
 });
 </script>
 <style>
