--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -198,7 +198,7 @@ width: 220px;
 }
 .navi nav a{
     text-decoration: none;
-    margin-bottom: 0 0 4px;
+    margin-bottom: 4px;
     padding: 0 0 0 12px;
     display: none;
 }
