--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -55,7 +55,7 @@
   });
 
   $(window).on('scroll', function() {
-    $('.section, segment').each(function() {
+    $('.section, .segment').each(function() {
       var sectionTop = $(this).offset().top;
       var scrollTop = $(window).scrollTop();
       
