--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -245,6 +245,8 @@ margin: bottom 16px;
   position: relative;
   width: 100%;
   padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+  display: block;
+  border-radius: 4px;
 }
 .segment .img img {
   position: absolute;
@@ -252,6 +254,27 @@ margin: bottom 16px;
   left: 0;
   width: 100%;
   height: 100%;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* TABLETS */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 992px) {
+
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*/
+/* SM TABLETS */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 768px) {
+
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*/
+/* MOBILES */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (max-width: 576px) {
+
+/*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
 </style>
@@ -315,7 +338,7 @@ margin: bottom 16px;
         <div id="product" class="segment">
             <h4>Product</h4>
             <span class="img">
-                <img />
+                <img src="" alt="" />
             </span>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
