--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -248,7 +248,9 @@ margin: bottom 16px;
   display: block;
   border-radius: 4px;
 }
+.segment .img span,
 .segment .img img {
+border: 0;
   position: absolute;
   top: 0;
   left: 0;
