--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -170,7 +170,7 @@ font-weight: 700;
 line-height: 140%; 
 font-family: Lora;
 }
-
+h3 { font-size: 1.6em; }
 .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
