--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -385,14 +385,14 @@ padding: 16px;
         <h3>Intial Experience Revamp</h3>
         <div id="project" class="segment">
             <h4>Project</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <p>I work as a Senior UX Designer for the Tsukasapo project. I lead initiatives which synthesis research insights and convert into concept designs for Road Map and Backlog items.</p>
         </div>
         <div id="product" class="segment">
             <h4>Product</h4>
             <span class="img">
                 <img src="" alt="" />
             </span>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <p>The Tsukasapo app is a premium tech support & solutions app provided as part of a device protection service for au (KDDI). </p>
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
@@ -405,14 +405,15 @@ padding: 16px;
      <div id="definition" class="section">
         <div id="problem" class="segment">
             <h4>Problem</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <p>The Tsukasapo service has over 4million paid users however less than 50% of users have progressed beyond the apps provisioning flow and a further drop in users is seen after day 1 viewing is completed.</p>
         </div>
         <div id="pain-points" class="segment">
             <h4>Pain Points</h4>
-            <span class="img">
-                <img />
-            </span>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <ol>
+                <li>The apps value proposition is not clear to users.</li>
+                <li>Provisioning has many steps which require high level of user comprehension.</li>
+                <li>App UI is text rich and requires high level of user comprehension.</li>
+            </ol>
         </div>
         <div id="goal" class="segment">
             <h4>Goal</h4>
