--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -385,7 +385,7 @@ padding: 16px;
         <h3>Intial Experience Revamp</h3>
         <div id="project" class="segment">
             <h4>Project</h4>
-            <p>I work as a Senior UX Designer for the Tsukasapo project. I lead initiatives which synthesis research insights and convert into concept designs for Road Map and Backlog items.</p>
+            <p>I work as a Senior UX Designer for the Tsukasapo project. I lead upstream tasks which synthesis research insights and convert into concept designs for Road Map and Backlog items.</p>
         </div>
         <div id="product" class="segment">
             <h4>Product</h4>
