--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -210,6 +210,11 @@ opacity: 68%;
 .navi a{
 color: #000;
 }
+h3,
+.navi nav.selected a:first-of-type,
+.navi nav .selected{
+    font-weight: bold;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
@@ -248,10 +253,6 @@ width: 244px;
 .navi nav a:first-of-type,
 .navi nav.selected a{
     display: block;
-}
-.navi nav.selected a:first-of-type,
-.navi .nav .selected{
-    font-weight: bold;
 }
 .navi nav a:first-of-type{
     padding-left: 0;
