--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -219,6 +219,7 @@ h3,
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
+.navi .back,
 .section .img{
 background-color: #E9E9ED;
 }
@@ -258,6 +259,12 @@ width: 244px;
 .navi nav a:first-of-type{
     padding-left: 0;
     margin-bottom: 12px;
+}
+.navi .back{
+    width: 36px;
+    font-size: 20px;
+    line-height: 36px;
+    border-radius: 100px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
