--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -394,7 +394,19 @@ padding: 16px;
         <h3>Intial Experience Revamp</h3>
         <div id="project" class="segment">
             <h4>Project</h4>
-            <p>I work as a Senior UX Designer for the Tsukasapo project. I lead upstream tasks which synthesis research insights and convert into concept designs for Road Map and Backlog items.</p>
+            <p>I work as a Senior UX Designer for the Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
+            <ul>
+                <li><h4>Role <span>Senior UX Designer</span></h4></li>
+                <li><h4>Duration <span>June 2021 ~ Present</span></h4></li>
+                <li><h4>Team 
+                    <span class="member">UX</span>
+                    <span class="member">UX</span>
+                    <span class="member">UX</span>
+                    <span class="member">UX</span>
+                    <span class="member">UX</span>
+                    <span class="member">UX</span>
+                </h4></li>
+            </ul>
         </div>
         <div id="product" class="segment">
             <h4>Product</h4>
